# provisioning-and-management

./: CHANGELOG.md  Makefile.am  README.md  configure.ac  tags  test.txt
.github/: CODEOWNERS
.github/workflows/: native-build.yml
arch/intel_usg/boards/arm_shared/scripts/: AutoReboot.sh  ScheduleAutoReboot.sh  moca_status.sh  network_response.sh  partners_defaults.json  process_monitor.sh  restart_services.sh  revert_redirect.sh
arch/intel_usg/boards/arm_shared/scripts/systemd/: sysd_process_monitor.sh
config-arm/: TR181-USGv2.XML  TR181-USGv2_bci.XML  TR181-USGv2_nowifi.XML  comcast-TR181-USGv2.XML
cov_docker_script/: component_config.json  configure_options.conf
custom/comcast/source/TR-181/custom_include/: cosa_deviceinfo_apis_custom.h  cosa_x_cisco_com_truestaticip_apis.h  cosa_x_comcast-com_gre_apis.h  cosa_x_comcast_com_gre_apis.h
custom/comcast/source/TR-181/custom_ml/: Makefile.am  cosa_deviceinfo_dml_custom.c  cosa_x_cisco_com_gre_dml.c  cosa_x_cisco_com_truestaticip_dml.c  cosa_x_cisco_com_truestaticip_internal.c  cosa_x_comcast-com_gre_dml.c  cosa_x_comcast-com_gre_internal.c  cosa_x_comcast_com_gre_internal.c
custom/comcast/source/TR-181/custom_sbapi/: Makefile.am  cosa_deviceinfo_apis_custom.c  cosa_x_cisco_com_gre_apis.c  cosa_x_cisco_com_truestaticip_apis.c  cosa_x_comcast-com_gre_apis.c  cosa_x_comcast_com_gre_apis.c
scripts/: email_notification_monitor.sh
source/: Makefile.am
source-arm/TR-181/board_ml/: Makefile.am  cosa_x_cisco_com_filetransfer_internal.c
source-arm/TR-181/board_sbapi/: Makefile.am  cosa_GRE_webconfig_apis.c  cosa_bridging_apis.c  cosa_bridging_apis_ext.h  cosa_common_util.c  cosa_common_util.h  cosa_deviceinfo_apis.c  cosa_dhcpv4_apis.c  cosa_dhcpv4_webconfig_apis.c  cosa_dhcpv6_apis.c  cosa_dns_apis.c  cosa_drg_common.c  cosa_dslite_apis.c  cosa_dynamicdns_apis.c  cosa_ethernet_apis.c  cosa_ethernet_apis_ext.h  cosa_firewall_apis.c  cosa_hosts_apis.c  cosa_ip_apis.c  cosa_ipv6rd_apis.c  cosa_lanmanagement_apis.c  cosa_managedwifi_webconfig_apis.c  cosa_mapt_apis.c  cosa_nat_apis.c  cosa_neighdisc_apis.c  cosa_ppp_apis.c  cosa_ra_apis.c  cosa_routing_apis.c  cosa_time_apis.c  cosa_upnp_apis.c  cosa_userinterface_apis.c  cosa_users_apis.c  cosa_x_cisco_com_ddns_apis.c  cosa_x_cisco_com_devicecontrol_apis.c  cosa_x_cisco_com_diagnostics_apis.c  cosa_x_cisco_com_filetransfer_apis.c  cosa_x_cisco_com_mld_apis.c  cosa_x_cisco_com_rlog_apis.c  cosa_x_cisco_com_security_apis.c  cosa_x_comcast_com_parentalcontrol_apis.c  (+3 more)
source/PandMSsp/: Makefile.am  ssp_action.c  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/include/: cosa_GRE_webconfig_apis.h  cosa_bridging_apis.h  cosa_deviceinfo_apis.h  cosa_dhcpv4_apis.h  cosa_dhcpv4_webconfig_apis.h  cosa_dhcpv6_apis.h  cosa_dml_api_dns.h  cosa_drg_common.h  cosa_dslite_apis.h  cosa_dynamicdns_apis.h  cosa_ethernet_apis.h  cosa_ethernet_apis_multilan.h  cosa_firewall_apis.h  cosa_hosts_apis.h  cosa_ip_apis.h  cosa_ip_apis_multilan.h  cosa_ipv6rd_apis.h  cosa_lanmanagement_apis.h  cosa_managedwifi_webconfig_apis.h  cosa_mapt_apis.h  cosa_nat_apis.h  cosa_nat_dml_custom.h  cosa_nat_webconfig_apis.h  cosa_neighdisc_apis.h  cosa_ppp_apis.h  cosa_ra_apis.h  cosa_routing_apis.h  cosa_time_apis.h  cosa_upnp_apis.h  cosa_userinterface_apis.h  cosa_users_apis.h  cosa_x_cisco_com_ddns_apis.h  cosa_x_cisco_com_devicecontrol_apis.h  cosa_x_cisco_com_diagnostics_apis.h  cosa_x_cisco_com_filetransfer_apis.h  cosa_x_cisco_com_mld_apis.h  cosa_x_cisco_com_multilan_apis.h  cosa_x_cisco_com_rlog_apis.h  cosa_x_cisco_com_security_apis.h  cosa_x_comcast_com_parentalcontrol_apis.h  (+7 more)
source/TR-181/integration_src.shared/: Makefile.am  cosa_ethernet_apis_multilan.c  cosa_ip_apis_multilan.c
source/TR-181/middle_layer_src/: Makefile.am  array_helpers.h  cosa_GRE_dml.h  cosa_advsec_utils.h  cosa_apis.h  cosa_apis_busutil.c  cosa_apis_busutil.h  cosa_apis_util.c  cosa_apis_util.h  cosa_bridging_dml.c  cosa_bridging_dml.h  cosa_bridging_internal.c  cosa_bridging_internal.h  cosa_com_cisco_spvtg_ccsp_pam_dml.c  cosa_com_cisco_spvtg_ccsp_pam_dml.h  cosa_deviceinfo_dml.c  cosa_deviceinfo_dml.h  cosa_deviceinfo_internal.c  cosa_deviceinfo_internal.h  cosa_dhcpv4_dml.c  cosa_dhcpv4_dml.h  cosa_dhcpv4_internal.c  cosa_dhcpv4_internal.h  cosa_dhcpv6_dml.c  cosa_dhcpv6_dml.h  cosa_dhcpv6_internal.c  cosa_dhcpv6_internal.h  cosa_dns_dml.c  cosa_dns_dml.h  cosa_dns_internal.c  cosa_dns_internal.h  cosa_dslite_dml.c  cosa_dslite_dml.h  cosa_dslite_internal.h  cosa_dynamicdns_dml.c  cosa_dynamicdns_dml.h  cosa_dynamicdns_internal.c  cosa_dynamicdns_internal.h  cosa_ethernet_dml.c  cosa_ethernet_dml.h  (+126 more)
source/test/: Makefile.am  cosa_common_util_test.cpp  cosa_deviceinfo_dml_custom_test.cpp  cosa_routing_dml_test.cpp  gtest_main.cpp  pandmssp_mock.cpp  pandmssp_mock.h  rbus_handler_test.cpp  run_ut.sh  speedBoostDocGtest.cpp  speedBoostWebconfigApisGtest.cpp  webuiWebConfigGtest.cpp
source/test/mocks/: cosaDeviceInfoApisCustomMock.cpp  cosaDeviceInfoApisCustomMock.h  cosaDeviceInfoApisMock.cpp  cosaDeviceInfoApisMock.h  cosaWebconfigApisMock.cpp  cosaWebconfigApisMock.h  cosa_routing_dml_mock.cpp  cosa_routing_dml_mock.h  helpersMock.cpp  helpersMock.h  parodusInterfaceMock.cpp  parodusInterfaceMock.h  rbushandler_mock.cpp  rbushandler_mock.h  speedboostRbusHandlersMock.cpp  speedboostRbusHandlersMock.h  speedboostSchedulerApisMock.cpp  speedboostSchedulerApisMock.h
